...
            nameKey="name"
            width={150}
            height={100}
            innerRadius={25}
            outerRadius={40}
            centerValue="75%"
            centerLabel="Done"
            showCenterContent={true}
          />
        </CardWrapper>
      </div>
    </div>
  )
...
